third_party/move/move-prover/move-abigen/tests/sources/bad_script.exp
Move prover abigen returns: exiting with context checking errors
error: expected `u64` but found a value of type `bool`
  ┌─ tests/sources/bad_script.move:3:15
  │
3 │         abort true  // type error, abort code must be a u64
  │               ^^^^
